@@ -1,5 +1,5 @@
 /*
- * $Id: tclOOStubLib.c,v 1.1.2.4 2008/06/16 03:17:12 dgp Exp $
+ * $Id: tclOOStubLib.c,v 1.1.2.5 2010/01/25 21:05:08 dgp Exp $
  * ORIGINAL SOURCE: tk/generic/tkStubLib.c, version 1.9 2004/03/17
  */
 
@@ -14,10 +14,8 @@
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
-#include "tcl.h"
 
 #define USE_TCLOO_STUBS 1
-#include "tclOO.h"
 #include "tclOOInt.h"
 
 MODULE_SCOPE const TclOOStubs *tclOOStubsPtr;
